Set up basic layout.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,11 @@
   </head>
 
   <body>
+    <nav>
+      <ul>
+        <li><a href="/workouts">Workouts</a></li>
+      </ul>
+    </nav>
     <%= yield %>
   </body>
 </html>
