--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
   <body>
     <nav>
       <ul>
+        <li><a href="/">Home</a></li>
         <li><a href="/workouts">Workouts</a></li>
       </ul>
     </nav>
