--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -1,35 +1,15 @@
-<h1>Workout</h1>
+<h1>Workouts</h1>
 
-<h2>Exercises</h2>
-<% @exercises_in_workout.each do |exercise| %>
-  <p><%= exercise %>
-  <table border="1px solid black">
-    <tr>
-      <th>Set</th>
-      <th>Weight (lbs)</th>
-      <th>Reps</th>
-      <th>Volume (lbs)</th>
-    </tr>
-
-    <% Exercise.where({ :movement_id => exercise }).each do |set| %>
-    <tr>
-      <td><%= set.set %></td>
-      <td><%= set.weight %></td>
-      <td><%= set.reps %></td>
-      <td><%= set.volume %></td>
-    </tr>
-    <% end %>
-  </table>
-    
-  </ol>
-<% end %>
-
-<h2>Volume</h2>
-
-<% @exercises_in_workout.each do |exercise| %>
-  <p><%= exercise %></p>
-  <ul>
-   <li>Volume today: <%= Exercise.where({ :movement_id => exercise }).sum(:volume) %></p></li>
-   <li>Volume last time (date): </li>
-  </ul>
-<% end %>
+<table border="1px solid">
+  <tr>
+    <th>Date</th>
+    <th>Name</th>
+    <th>Focus</th>
+  </tr>
+  <tr>
+  <% @workouts.each do |workout| %>
+    <td><%= workout.created_at %></td>
+    <td><a href="/workouts/<%= workout.id %>"><%= workout.name %></a></td>
+  <% end %>
+  </tr>
+</table>
