Added ability to add and delete exercises from workouts.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,8 @@
   <body>
     <nav>
       <ul>
-        <li><a href="/">Home</a></li>
         <li><a href="/workouts">Workouts</a></li>
+        <li><a href="/movements">Movements</a></li>
       </ul>
     </nav>
     <%= yield %>
